# sam

./: .gitignore  CMakeLists.txt  README.md
include/sam/: sam.h  tts.h
res/: res.rc
src/: client.cpp  daemon.cpp  sam.cpp  tts.cpp
